--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/**/**.test.js --reporter nyan"
+    "test": "mocha test/**/**.test.js --reporter nyan",
+    "coverage": "istanbul cover _mocha -- -R spec"
   },
   "keywords": [
     "sqs",
