Proper mocha path

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/**/**.test.js --reporter nyan",
+    "test": "./node_modules/mocha/bin/mocha test/**/**.test.js --reporter nyan",
     "coverage": "istanbul cover _mocha -- -R spec"
   },
   "keywords": [
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "chai": "^2.1.0",
+    "mocha": "^2.1.0",
     "sinon": "^1.12.2"
   },
   "repository": {
